# python_pyside2_template

./: .gitignore  README.md  pyproject.toml
resources/ui/: main_window.ui
src/: file_manager.py  main.py  my_logger.py  overloaded.py  process_test.py  processes.py  test_qprocess.py  threading_example.py
