[tool.poetry]
name = "python-pyside2-template"
version = "0.1.0"
description = ""
authors = ["Josh <Joshua.Botha@up.ac.za>"]

[tool.poetry.dependencies]
python = "^3.9.0,<3.10"
PySide2 = "^5.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
